...
                EmptyListJourneyView()
            } else if viewModel.vehicleJourneys.isEmpty {
                EmptyListJourneyView(title: "No Journey found!", subtitle: "Try searching for another journey")
            } else {
                switch currentStep {
                case .datePicker:
                    DatePickerView(viewModel: createDatePickerViewModel(), router: router) { selectedRow in
                        router.navigate(to: .stationPicker(selectedRow))
                    }
                case .stationPicker:
                    if let selectedDateRow = selectedDateRow {
                        StationPickerView(viewModel: StationPickerViewModel(pickedJourney: selectedDateRow)) { pickedJourney in
                            router.navigate(to: .confirmation(pickedJourney))
...
